--- a/resources/lang/kh.json
+++ b/resources/lang/kh.json
@@ -1,4 +1,27 @@
 {
+    "Explore Our Work": "ស្វែងយល់អំពីការងាររបស់ពួកយើង",
+    "Partner With Us": "ចូលរួមជាដៃគូជាមួយពួកយើង",
+    "Learn More": "ស្វែងយល់បន្ថែម",
+    "See More": "មើលបន្ថែម",
+    "Quick Links": "តំណភ្ជាប់រហ័ស",
+    "Social Media": "បណ្ដាញសង្គម",
+    "Contact Us": "ទាក់ទងមកពួកយើង",
+    "Send Us a Message": "ផ្ញើសារ​មកពួក​យើង",
+    "Phone": "ទូរស័ព្ទ",
+    "Subject": "ប្រធានបទ",
+    "Message": "សារ",
+    "Messages": "សារ​",
+    "Teams and Careers": "ក្រុម និងអាជីព",
+    "Teams": "ក្រុម",
+    "Careers": "អាជីព",
+    "Career Submits": "ការដាក់ពាក្យសុំការងារ",
+    "How to Apply": "របៀបដាក់ពាក្យ",
+    "Attach CV": "ភ្ជាប់ប្រវត្តិរូបរបស់អ្នក",
+    "Apply Now": "ដាក់ពាក្យឥឡូវនេះ",
+    "Current Opportunities": "ឱកាសការងារបច្ចុប្បន្ន",
+    "Apply": "ដាក់ពាក្យ",
+    "Submitting...": "កំពុងដាក់ស្នើ...",
+
     "Body Types": "ប្រភេទតួរថយន្ត",
 
     "Products": "ផលិតផល",
@@ -87,8 +110,8 @@
     "Projects": "គម្រោង",
     "Item": "ធាតុ",
     "Items": "ធាតុ",
-    "Heading": "ចំណងជើងមេ",
-    "Headings": "ចំណងជើងមេ",
+    "Heading": "ចំណងជើងមេ និងប៊ូតុង",
+    "Headings": "ចំណងជើងមេ​ និងប៊ូតុង",
     "Application Info": "ព័ត៌មានអំពីកម្មវិធី",
     "Application Infos": "ព័ត៌មានអំពីកម្មវិធី",
     "Type": "ប្រភេទ",
