update login page

--- a/resources/lang/kh.json
+++ b/resources/lang/kh.json
@@ -21,6 +21,11 @@
     "Current Opportunities": "ឱកាសការងារបច្ចុប្បន្ន",
     "Apply": "ដាក់ពាក្យ",
     "Submitting...": "កំពុងដាក់ស្នើ...",
+    "Forgot password?": "ភ្លេចពាក្យសម្ងាត់?",
+    "Remember me": "ចងចាំខ្ញុំ",
+    "Log in": "ចូលគណនី",
+    "Log in to your account": "ចូលទៅកាន់គណនីរបស់អ្នក",
+    "Enter your email and password below to log in": "បញ្ចូលអ៊ីមែល និងពាក្យសម្ងាត់របស់អ្នកខាងក្រោម ដើម្បីចូលគណនី",
 
     "Body Types": "ប្រភេទតួរថយន្ត",
 
